syntax = "proto3";

package rlenv;

import "action.proto";


enum WorkerMessageTypeEnum {
  WORKER_MESSAGE_TYPE_ENUM___UNSPECIFIED = 0;
  WORKER_MESSAGE_TYPE_ENUM__START = 1;
  WORKER_MESSAGE_TYPE_ENUM__ACTION = 2;
}

message WorkerMessage {
  int32 worker_index = 1;
  WorkerMessageTypeEnum message_type = 2;
  Action action = 3;
  int32 game_id = 4;
}
